# AIBIO-L2D-demo

./: 2_classical_ml.ipynb  README.md  classical_ml.ipynb  data_explore.ipynb  explore_data.ipynb  neural_nets.ipynb  pyproject.toml  pytorch_demo.ipynb  test.ipynb
