[project]
name = "aibio-demo"
version = "0.1.0"
description = "demo notebooks for blog with AI BIO"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]
